<resources>

    <string name="submit">Submit</string>
    <string name="app_name">EZmow</string>
    <string name="action_settings">Settings</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_FAQ">FAQ</string>
    <string name="tab_book">Book Now</string>
    <string name="action_book">Book</string>
    <string name="image_desc">Ezmow Logo</string>
    <string name="action_address">Address</string>
    <string name="action_name">Name</string>
    <string name="action_phone">Phone Number</string>
    <string name="book_now_title">Book Now</string>
    <string name="contact_inquiry_hint">Ask Us Anything</string>
    <string name="contact_inquiry_label">Inquiry</string>
    <string name="contact_email_hint">john123@example.com</string>
    <string name="contact_email_label">Email</string>
    <string name="contact_phoneNumber_hint">123-456-7890</string>
    <string name="contact_phoneNumber_label">Phone Number</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_name_label">Name</string>
    <string name="contact_title">Contact Us!</string>
    <string name="settings_set_locale">Language:</string>
    <string name="faq_header">FAQ</string>
    <string name="err_cant_be_empty">Field can\'t be empty</string>
    <string name="err_must_be_phone">Must be valid phone number: 1&#8211;123&#8211;123&#8211;1234</string>
    <string name="err_must_be_email">Must be a valid email john123@email.com</string>
    <string name="sent_consultation">Consultation Sent</string>
    <string name="sent_contact">Inquiry Sent</string>
    <string name="attempting_to_contact"> You will be informed if the contact went through momentarily with a toast at the bottom of the screen</string>
    <string name="home_title">About Us</string>
    <string name="home_text">EZMow is lawn care made easy, book a service with us and have a lawn mowing robot come to your door steps to take care of the rest! Use the contact us form for any inquiries.**Employee supervisor will be on site.**</string>
    <string name="perf_contact_choice">Preferred method of contact:</string>
    <string name="perf_contact_choice_email">Email</string>
    <string name="perf_contact_choice_phone">Phone</string>
    <string name="calculation_title">Estimated Price</string>
    <string name="area">Area</string>
    <string name="obstruction">Obstructions</string>
    <string name="quote">QUOTE</string>
    <string name="quote_lawn_size">I know lawn size</string>
    <string name="quote_sq_ft">Sq ft</string>
    <string name="quote_select">Select a similar picture</string>
    <string name="quote_add_obstruction">Add Obstruction</string>
    <string name="quote_reset">RESET</string>
    <string name="quote_submit">SUBMIT</string>
    <string name="quote_qty">Qty</string>
    <string name="quote_copy">Copy information</string>



</resources>
