<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="408dp"
        android:layout_marginTop="52dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textSize="24dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/contact_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/action_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/con_nameE"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/action_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/con_phoneNumE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/con_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/contact_email_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/con_emailE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/preferredLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/perf_contact_choice"

                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/pref_group"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/pref_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perf_contact_choice_phone" />

                    <RadioButton
                        android:id="@+id/pref_email"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perf_contact_choice_email" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/inquiryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/contact_inquiry_label" />

            <EditText
                android:id="@+id/inquiryInput"
                android:layout_width="362dp"
                android:layout_height="204dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/contact_inquiry_hint"
                android:gravity="start|top"
                android:background="@drawable/back"
                android:inputType="textMultiLine" />
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/submit" />


        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>