<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="692dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/CalculationHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/quote"
                android:textSize="24dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/area">

                <RadioGroup
                    android:id="@+id/radio1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="57dp"
                            android:checked="true"
                            android:text="@string/quote_lawn_size"
                            android:textSize="24sp"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/editText"
                                android:layout_width="230dp"
                                android:layout_height="32dp"
                                android:layout_marginLeft="80px"
                                android:background="@drawable/edit_bg"
                                android:baselineAligned="false"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:selectAllOnFocus="true"
                                android:singleLine="true"
                                android:textAlignment="textStart"
                                android:typeface="normal" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/quote_sq_ft"
                                android:textAlignment="center"
                                android:textSize="24sp" />
                        </LinearLayout>

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/quote_select"
                            android:textSize="24sp" />

                        <RadioGroup
                            android:id="@+id/radio2"
                            android:layout_width="match_parent"
                            android:layout_height="255dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="257dp"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="126dp"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/radioButton4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_margin="20px"
                                        android:layout_weight="2"
                                        android:background="@drawable/r1_checked"
                                        android:button="@drawable/back_radio"
                                        android:checked="false"
                                        android:editable="false"
                                        android:enabled="false"
                                        android:padding="5px"
                                        android:selectAllOnFocus="false" />

                                    <RadioButton
                                        android:id="@+id/radioButton5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_margin="20px"
                                        android:layout_weight="2"
                                        android:background="@drawable/r2_checked"
                                        android:button="@drawable/back_radio"
                                        android:editable="false"
                                        android:enabled="false"
                                        android:padding="5px" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="127dp"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/radioButton6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_margin="20px"
                                        android:layout_weight="2"
                                        android:background="@drawable/r3_checked"

                                        android:button="@drawable/back_radio"
                                        android:editable="false"
                                        android:enabled="false"
                                        android:padding="5px" />

                                    <RadioButton
                                        android:id="@+id/radioButton7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_margin="20px"
                                        android:layout_weight="2"
                                        android:background="@drawable/r4_checked"

                                        android:button="@drawable/back_radio"
                                        android:checked="false"
                                        android:editable="false"
                                        android:enabled="false"
                                        android:padding="5px" />
                                </LinearLayout>
                            </LinearLayout>
                        </RadioGroup>

                    </LinearLayout>

                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/obstruction"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/obstruction"
                android:paddingTop="40px">

                <View

                    android:layout_width="wrap_content"

                    android:layout_height="2dp"

                    android:layout_gravity="center_horizontal"

                    android:background="@color/button_material_dark"

                    android:paddingTop="10px"
                    android:paddingBottom="20px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:paddingTop="10px">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButton4"
                        android:layout_width="42dp"
                        android:layout_height="32dp"
                        android:layout_margin="15px"
                        android:layout_weight="1"
                        android:adjustViewBounds="false"
                        android:clickable="false"
                        android:src="@android:drawable/ic_input_add"
                        app:backgroundTint="@color/colorPrimary"
                        app:fabSize="mini"
                        app:useCompatPadding="false" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="329dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:paddingTop="10px"
                        android:text="@string/quote_add_obstruction"
                        android:textSize="24sp" />

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>


            <com.redflag.lawncare.calculation.MyDetailsListView
                android:id="@+id/listview"
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:minHeight="70dp"
                android:paddingLeft="40px"
                android:paddingRight="40px" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50px"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20px">

                    <Button
                        android:id="@+id/SubmitButton1"
                        android:layout_width="162dp"
                        android:layout_height="46dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/quote_reset"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/submitButton2"
                        android:layout_width="165dp"
                        android:layout_height="47dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="24sp" />

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>